--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
-#kitty{
-    width: 100px;
-    height: 100px;
-    position: relative;
-    top: 0;
-    left: 0;
+
+
+.Merica {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+.meat {
+    margin-bottom: 80px;
 }
